# heartbeat-gateway

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  SOUL.md.example  main.py  pyproject.toml  railway.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-cli-foundation-gateway-doctor/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-gateway-init/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-schema-foundation-posthog-wizard/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-braintrust-adapter/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-langsmith-adapter/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-amplitude-adapter/: .continue-here.md  06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: adapters.md  configuration.md  deploying.md  mcp.md
examples/: SOUL.md.example  config.example.yaml
heartbeat_gateway/: __init__.py  app.py  classifier.py  cli.py  mcp_server.py  pre_filter.py  writer.py
heartbeat_gateway/adapters/: amplitude.py  base.py  braintrust.py  github.py  langsmith.py  linear.py  posthog.py
heartbeat_gateway/commands/: doctor.py  init.py
heartbeat_gateway/config/: loader.py  schema.py
heartbeat_gateway/prompts/: classify.yaml
heartbeat_gateway/skill/: heartbeat-gateway-setup.md
tests/: test_app.py  test_classifier.py  test_integration.py  test_mcp_server.py  test_pre_filter.py  test_schema.py  test_server.py  test_writer.py
tests/adapters/: test_amplitude.py  test_braintrust.py  test_github.py  test_langsmith.py  test_linear.py  test_posthog.py
tests/cli/: test_cli.py  test_doctor.py  test_init.py
tests/fixtures/: amplitude_annotation.json  amplitude_monitor_alert.json  braintrust_environment_update.json  braintrust_is_test.json  braintrust_logs.json  github_ci_failure.json  github_pr_merged.json  github_star.json  langsmith_alert.json  langsmith_feedback.json  langsmith_run_clean.json  langsmith_run_error.json  linear_comment_unrelated.json  linear_issue_blocked.json  posthog_pageview.json  posthog_threshold_alert.json
