[project]
name = "heartbeat-gateway"
version = "0.1.0"
description = "Event-driven HEARTBEAT.md writer for OpenClaw and VikingBot agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "kahunahana" }]
keywords = ["agent", "webhook", "heartbeat", "openviking", "openclaw", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.12",
    "mcp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/kahunahana/heartbeat-gateway"
Repository = "https://github.com/kahunahana/heartbeat-gateway"
Issues = "https://github.com/kahunahana/heartbeat-gateway/issues"
Changelog = "https://github.com/kahunahana/heartbeat-gateway/blob/main/CHANGELOG.md"

[project.scripts]
heartbeat-gateway = "heartbeat_gateway.app:main"
heartbeat-gateway-mcp = "heartbeat_gateway.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
